renamed ProcessingJob.java to ComputeJob